# python_mumble_bot

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  Pipfile.lock.old  README.md
.github/workflows/: publish-docker.yml  test.yml
bot/: Dockerfile  Pipfile  setup.cfg
bot/test/: test_recording_manager.py
deploy/: .env.example  docker-compose.discord.yaml  docker-compose.yaml  tailscale-serve.discord.json  tailscale-serve.json
discord_bot/: Dockerfile  Pipfile  setup.cfg
discord_bot/python_discord_bot/: __main__.py  bot.py  config.py  playback.py
discord_bot/test/: conftest.py  test_playback.py
mumble_bot/: Dockerfile  setup.cfg
mumble_bot/python_mumble_bot/: __main__.py
mumble_bot/test/: test_capture_manager.py  test_command.py  test_song_queue.py  test_voice_state_manager.py
pmb_core/: pyproject.toml  setup.cfg
pmb_core/pmb_core/: constants.py
pmb_core/pmb_core/audio/: midi.py  transform.py
pmb_core/pmb_core/db/: mongodb.py
pmb_core/test/: test_midi.py
python_mumble_bot/: __main__.py  python_mumble_bot.py
python_mumble_bot/bot/: api_wrapper.py  client.py  command.py  constants.py  event.py  manager.py
python_mumble_bot/db/: mongo_db_setup.md  mongo_db_setup.txt  mongodb.py
python_mumble_bot/music/: piece.py
python_mumble_bot/musicxml/: parser.py
src/bot/: python_mumble_bot.py  record.py
test/: mocks.py  test_command.py  test_record.py  test_recording_manager.py  test_state_manager.py  test_text_message_manager.py
web/: Dockerfile  Pipfile
web/app/: auth.py  database.py  main.py
web/test/: conftest.py  (+6 more)
(+87 files in other folders)
